# micromail

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
c-bindings/: Cargo.toml  buid.rs  cbindgen.toml
c-bindings/examples/: example.c
c-bindings/include/: micromail.h
c-bindings/src/: lib.rs
examples/: async.rs  basic.rs  signing.rs
js-bindings/: Cargo.toml  README.md  index.js  package-lock.json  package.json  test.js
js-bindings/examples/: async.js  basic.js
js-bindings/src/: lib.rs
python-bindings/: Cargo.toml  README.md  pyproject.toml
python-bindings/examples/: basic.py
python-bindings/src/: lib.rs
python-bindings/tests/: test_micromail.py
src/: async_mail.rs  c_api.rs  config.rs  connection.rs  dns.rs  error.rs  io.rs  lib.rs  mail.rs  nodejs_api.rs  python_api.rs  signing.rs  tls.rs  utils.rs
tests/: dkim_tests.rs  test.rs
