[package]
name = "micromail"
version = "0.1.0"
edition = "2021"
description = "A minimal mail sending library that works on WASM Edge"
repository = "https://github.com/fschutt/micromail"
license = "MIT OR Apache-2.0"
keywords = ["email", "mail", "smtp", "wasm"]
categories = ["email", "wasm"]
readme = "README.md"
autoexamples = false

[dependencies]
rustls = "0.23.27"
thiserror = "1.0"
tokio = { version = "1.45.0", features = ["full"], optional = true }
async-trait = { version = "0.1.88", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
log = "0.4"
bytes = "1.10"
ed25519-dalek = { version = "2.1.1", optional = true }
sha2 = { version = "0.10.9", optional = true }
base64 = "0.22.1"
chrono = "0.4.41"
rand = { version = "0.9.1", features = ["thread_rng"] }
futures = { version = "0.3", optional = true }
microdns = "0.1.0"

[features]
default = ["tokio-runtime", "signing"]
tokio-runtime = ["tokio", "async-trait", "futures"]
signing = ["ed25519-dalek", "sha2"]
serialize = ["serde"]
c-api = []
python-api = []
nodejs-api = []

[dev-dependencies]
tokio-test = "0.4.3"
criterion = "0.5.1"
tempfile = "3.8.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "async"
src = "examples/async.rs"
required-features = ["tokio-runtime"]

[[example]]
name = "basic"
src = "examples/basic.rs"
required-features = []

[[example]]
name = "signing"
src = "examples/signing.rs"
required-features = ["signing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["c-bindings", "python-bindings", "js-bindings"]