[package]
name = "micromail"
version = "0.1.0"
edition = "2021"
description = "A minimal mail sending library that works on WASM Edge"
repository = "https://github.com/fschutt/micromail"
license = "MIT OR Apache-2.0"
keywords = ["email", "mail", "smtp", "wasm"]
categories = ["email", "wasm"]
readme = "README.md"
autoexamples = false

[dependencies]
rustls = "0.23.27"
thiserror = "1.0"
tokio = { version = "1.45.0", features = ["full"], optional = true }
async-trait = { version = "0.1.88", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
log = "0.4"
bytes = "1.10"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
rand = { version = "0.8.5" }
futures = { version = "0.3", optional = true }
microdns = "0.1.0"
pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.20.0", features = ["tokio"], optional = true }
neon = { version = "1.0.0", default-features = false, features = ["napi-6"], optional = true }

mail-auth = { version = "0.7.1", features = ["rust-crypto"], optional = true }
# rsa dependency with corrected features based on user feedback and typical usage
rsa = { version = "0.9.6", default-features = false, features = ["pem", "pkcs1", "pkcs8"], optional = true }
rand_core = { version = "0.6.4", features = ["std"], optional = true }

[features]
default = ["tokio-runtime", "signing"]
tokio-runtime = ["tokio", "async-trait", "futures"]
signing = ["dep:mail-auth", "dep:rsa", "dep:rand_core"]
serialize = ["serde", "chrono/serde"]
c-api = []
python-api = ["pyo3", "pyo3-asyncio", "tokio-runtime", "serialize"]
nodejs-api = ["neon", "serialize"]

[dev-dependencies]
tokio-test = "0.4.3"
criterion = "0.5.1"
tempfile = "3.8.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "async"
src = "examples/async.rs"
required-features = ["tokio-runtime"]

[[example]]
name = "basic"
src = "examples/basic.rs"
required-features = []

[[example]]
name = "signing"
src = "examples/signing.rs"
required-features = ["signing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["c-bindings", "python-bindings", "js-bindings"]
