[package]
name = "micromail-js"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for micromail"
license = "MIT OR Apache-2.0"

[lib]
name = "micromail"
crate-type = ["cdylib"]

[dependencies]
micromail = { path = "..", features = ["nodejs-api"] }
neon = { version = "0.10.1", default-features = false, features = ["napi-6"] }