[package]
name = "micromail-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for micromail"
license = "MIT OR Apache-2.0"

[lib]
name = "micromail"
crate-type = ["cdylib"]

[dependencies]
micromail = { path = "..", features = ["python-api"] }
pyo3 = { version = "0.18.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18.0", features = ["tokio-runtime"] }